# trmnl_agenda

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cronjob  docker-compose.yml  mise.toml  pyproject.toml  start.sh
TRMNL/src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
trmnl_agenda/: google_calendar.py  main.py  settings.py
trmnl_agenda/weather/: __init__.py  base.py  openweather.py  tomorrowio.py
util/: README.md  convert_images.py
